tdf#109107: Sidebar's fontheight field is not updated...

... by moving cursor in an Impress table

Table controller handles key and mouse events itself, but can't
do the invalidation of the slotids which would lead to update
sidebar corresponding widgets.

Change-Id: I0d1db58ecb714bb16dfb1b5662f0fba7ce69c06f
Reviewed-on: https://gerrit.libreoffice.org/39933
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
(cherry picked from commit 6feb40b950557dcfdc5249f22d72edad397d4c67)
Reviewed-on: https://gerrit.libreoffice.org/39949
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>